--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10",
+    "vue2-google-maps": "^0.10.7",
     "vue2-leaflet": "^2.7.1",
     "vuetify": "^2.6.10"
   },
