--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/leaflet": "^1.9.0",
     "cookie-universal-nuxt": "^2.2.2",
     "core-js": "^3.25.3",
+    "google-maps-api-loader": "^1.1.1",
     "leaflet": "^1.9.4",
     "nuxt": "^2.15.8",
     "nuxt-leaflet": "^0.0.27",
